Added a generic class for pairs, and implemented it in MathTest.java.